--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,23 @@
 @import "tailwindcss";
 
+/* @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@400;600&display=swap"); */
+
+.font-playfair {
+  font-family: "Playfair Display", serif;
+}
+.font-montserrat {
+  font-family: "Montserrat", sans-serif;
+}
+
+/* Hide Scrollbar */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
